--- a/app/assets/stylesheets/_social.sass
+++ b/app/assets/stylesheets/_social.sass
@@ -774,6 +774,18 @@ body.transition .moment
         display: block
         color: #0084c8
         font-size: 18px
+  .moment-rp-progress
+    margin-top: 100px
+    width: 75%
+    margin-left: 62px
+    .progress_bar_outer
+      margin-right: 100px
+    .progress_counter
+      width: 110px
+      height: 22px
+      line-height: 22px
+    .progress_wrap, .progress_bar_outer, .progress_bar, .progress_bar_shadow
+      height: 10px
 
 // !Group moment
 
