--- a/app/assets/stylesheets/mobile/_progress_bars.sass
+++ b/app/assets/stylesheets/mobile/_progress_bars.sass
@@ -41,7 +41,7 @@
 
 .progress_bar
   +border-left-radius(14px)
-  background: #789d4a
+  background: #59b200
   border-right: 1px solid #808f6b
   visibility: hidden
 
