--- a/app/assets/javascripts/templates/moments/plan_segment_completion.hbs
+++ b/app/assets/javascripts/templates/moments/plan_segment_completion.hbs
@@ -10,17 +10,15 @@
       <span class="moment-time">
         {{created_dt}}
       </span>
-      <div class="moment-rp-text">
-        <h2>
-          <a href="{{path}}" class="moment-title-link">
-            {{{moment_title}}}
-          </a>
-        </h2>
-      </div>
+      <h2 class="moment-rp-text">
+        <a href="{{path}}" class="moment-title-link">
+          {{{moment_title}}}
+        </a>
+      </h2>
     </div>
   </div>
   <div class="moment-btm">
-    {{> moments/_actions_bar}} 
+    {{> moments/_actions_bar}}
     {{> moments/_comments}}
   </div>
 </div>
