Progress bars on the feed - animated

--- a/app/assets/javascripts/templates/moments/plan_segment_completion.hbs
+++ b/app/assets/javascripts/templates/moments/plan_segment_completion.hbs
@@ -15,6 +15,18 @@
           {{{moment_title}}}
         </a>
       </h2>
+      <div class="moment-rp-progress">
+        <div class="progress_wrap">
+          <div class="progress_bar_outer">
+            <div class="progress_bar" data-percent-complete="{{{percent_complete}}}%">
+              &nbsp;
+            </div>
+          </div>
+          <div class="progress_counter">
+            {{{segment}}} of {{{total_segments}}}
+          </div>
+        </div>
+      </div>
     </div>
   </div>
   <div class="moment-btm">
