--- a/app/assets/stylesheets/_social.sass
+++ b/app/assets/stylesheets/_social.sass
@@ -775,7 +775,7 @@ body.transition .moment
         color: #0084c8
         font-size: 18px
   .moment-rp-progress
-    margin-top: 100px
+    margin-top: 90px
     width: 75%
     margin-left: 62px
     .progress_bar_outer
@@ -786,6 +786,8 @@ body.transition .moment
       line-height: 22px
     .progress_wrap, .progress_bar_outer, .progress_bar, .progress_bar_shadow
       height: 10px
+    .progress_wrap
+      margin-bottom: 0
 
 // !Group moment
 
