Modified code to be more Ruby
Changed .nil checks to .present or .blank and also modified unless statements with
else to be if statements instead with the positive check first.
Which makes a ton more sense anywhoos.

--- a/app/views/moments/_activity_sidebar.html.haml
+++ b/app/views/moments/_activity_sidebar.html.haml
@@ -14,7 +14,7 @@
           - avatar = avatars.sm_avatar
           %li.user
             %span.timeline-avatar
-              - unless user.id.nil?
+              - if user.username.present?
                 = link_to(user_path(user)) do
                   = image_tag avatar.url
                 = link_to(user.name, user_path(user.username), class: "user")
