Typekit javascripts to top of head

--- a/app/views/moments/introduction.html.haml
+++ b/app/views/moments/introduction.html.haml
@@ -1,5 +1,5 @@
 - @sidebar = false
-- content_for :javascripts do
+- content_for :typekit_javascripts do
   = javascript_include_tag '//use.typekit.net/mgk8ovf.js'
   :javascript
     try{Typekit.load();}catch(e){}
