--- a/app/assets/stylesheets/bdc_home.sass
+++ b/app/assets/stylesheets/bdc_home.sass
@@ -533,7 +533,7 @@ body, html
       padding-left: 20px
 
       h1
-        font: 44px 'RobotoLight', Arial, sans-serif
+        font: 44px 'chauncy-pro','RobotoLight', Arial, sans-serif
         letter-spacing: -0.05em
         width: 560px
       p
