Changed landing page to use Typekit instead of @font-face Changed a font on the moment intro page

--- a/app/assets/stylesheets/_social.sass
+++ b/app/assets/stylesheets/_social.sass
@@ -957,7 +957,10 @@ body.transition .moment
     background: image-url("intro-moments-top.png") no-repeat top right
 
   .intro-title
-    font-size: 63px
+    font:
+      size: 63px
+      family: "proxima-nova", "Helvetica Neue", Arial, "Liberation Sans", FreeSans, sans-serif
+
 
   .intro-copy
     font-size: 22px
