--- a/app/assets/stylesheets/mobile/_social.sass
+++ b/app/assets/stylesheets/mobile/_social.sass
@@ -1010,7 +1010,9 @@ body.transition .moment
     padding: 139px 0 0
 
   .intro-title
-    font-size: 53px
+    font:
+      size: 53px
+      family: "proxima-nova", "Helvetica Neue", Arial, "Liberation Sans", FreeSans, sans-serif
     display: block
     text-align: center
     margin: 20px 10px 0 10px
@@ -1067,7 +1069,7 @@ body.transition .moment
 
   .intro-discover-copy
     position: absolute
-    top: 237px
+    top: 220px
     right: auto
     width: 80%
 
