--- a/app/assets/stylesheets/bdc_home.sass
+++ b/app/assets/stylesheets/bdc_home.sass
@@ -1,23 +1,3 @@
-@font-face
-  font-family: 'RobotoLight'
-  src: font-url('Roboto-Light-webfont.eot')
-  src: font-url('Roboto-Light-webfont.eot') format('embedded-opentype')
-  src: font-url('Roboto-Light-webfont.woff') format('woff')
-  src: font-url('Roboto-Light-webfont.ttf') format('truetype')
-  src: font-url('Roboto-Light-webfont.svg') format('svg')
-  font-weight: normal
-  font-style: normal
-
-@font-face
-  font-family: 'BebasNeueRegular'
-  src: font-url('../fonts/BebasNeue-webfont.eot')
-  src: font-url('../fonts/BebasNeue-webfont.eot') format('embedded-opentype')
-  src: font-url('../fonts/BebasNeue-webfont.woff') format('woff')
-  src: font-url('../fonts/BebasNeue-webfont.ttf') format('truetype')
-  src: font-url('../fonts/BebasNeue-webfont.svg') format('svg')
-  font-weight: normal
-  font-style: normal
-
 body, html
   width: 100%
 
@@ -277,7 +257,7 @@ body, html
       margin-bottom: 10px
 
     h2
-      font: 39px 'RobotoLight', Arial, sans-serif
+      font: 39px "proxima-nova", Arial, sans-serif
       letter-spacing: -0.05em
       color: #666
       margin-bottom: 30px
@@ -420,7 +400,7 @@ body, html
         padding: 0 0 0 8px
 
       p:first-child
-        font: 50px 'BebasNeueRegular', Arial, sans-serif
+        font: 50px "bebas-neue", Arial, sans-serif
         letter-spacing: -.03em
         margin-top: -10px
         padding: 0
@@ -441,7 +421,7 @@ body, html
 
     h2
       margin-bottom: 10px
-      font: 39px 'RobotoLight', Arial, sans-serif
+      font: 39px "proxima-nova", Arial, sans-serif
       letter-spacing: -.05em
       background-image: none !important
 
@@ -533,7 +513,7 @@ body, html
       padding-left: 20px
 
       h1
-        font: 44px 'chauncy-pro','RobotoLight', Arial, sans-serif
+        font: 44px "proxima-nova", Arial, sans-serif
         letter-spacing: -0.05em
         width: 560px
       p
@@ -645,7 +625,7 @@ body, html
     width: 980px
 
     h2
-      font: 39px 'RobotoLight', Arial, sans-serif
+      font: 39px "proxima-nova", Arial, sans-serif
       letter-spacing: -0.05em
       color: #666
       margin-bottom: 30px
@@ -742,7 +722,7 @@ body, html
         padding: 0 0 0 9px
 
       p:first-child
-        font: 50px 'BebasNeueRegular', Arial, sans-serif
+        font: 50px "bebas-neue", Arial, sans-serif
         letter-spacing: -.03em
         margin-top: -10px
         padding: 0
@@ -763,7 +743,7 @@ body, html
     h2
       margin-bottom: 10px
       padding-left: 65px
-      font: 45px 'RobotoLight', Arial, sans-serif
+      font: 45px "proxima-nova", Arial, sans-serif
       letter-spacing: -.05em
       background: image-url("Bible-app-icon-en-small.png") no-repeat 0 52%
 
