--- a/app/assets/stylesheets/mobile/_users.sass
+++ b/app/assets/stylesheets/mobile/_users.sass
@@ -109,8 +109,8 @@
     color: #fff
     font-weight: bold
     border-radius: 4px
-    padding-left: 30px
-    background: image-url("icon-check-white.png") no-repeat 10px 8px #51652f
+    padding: 6px 10px 7px 30px
+    background: image-url("icon-check-white.png") no-repeat 10px 11px #51652f
     position: absolute
     right: 20px
     top: 22px
@@ -419,7 +419,6 @@ article.profile
   width: 60%
   display: block
 
-.friend-detail-add,
 .friend-detail-delete
   position: absolute
   height: 36px
@@ -432,7 +431,6 @@ article.profile
   right: 0
 
 .friend-detail-delete,
-.friend-detail-add,
 .friend-detail-status
   margin: 0 0 0 86px
   color: #777
@@ -443,7 +441,22 @@ article.profile
   background: image-url("friend-request-sprite.png") no-repeat center -128px #D30000
 
 .friend-detail-add
-  background: image-url("friend-request-sprite.png") no-repeat center 4px #00B400
+  +border-radius(4px)
+  font:
+    size: 12px
+    weight: bold
+  line-height: 1.3
+  text-align: center
+  padding: 7px 10px
+  +box-shadow(inset rgba(0,0,0, 0.20) 0 -2px 0 0)
+  background-color: #48A900
+  border: none
+  width: auto
+  height: auto
+  position: absolute
+  top: 27px
+  right: 0
+  color: #fff
 
 .friends-none
   background: image-url("social-psa-profiles.png") no-repeat center 40px
