--- a/app/views/friends/_list.html.haml
+++ b/app/views/friends/_list.html.haml
@@ -13,14 +13,14 @@
       %li.friend-detail
         = image_tag avatar.url, class: "friend-detail-avatar"
         = link_to(friend.name, user_path(friend.to_param), class: "friend-detail-name", title: t("users.profile.visit friend", friend: friend.name))
-        
+
         - if current_user_is? user # This is a list of my friends, show a delete friend link
           = link_to(t("friendships.form.remove friend button"), friend_path(friend.id), method: :delete, confirm: "Are you sure?", class: "friend-detail-delete", title: t("friendships.form.remove friend button title"))
-        
+
         - else # This is a list of another users friends, show friendship status and/or display a link to friend them
           - if current_user.friends_with? friend.id
             %span.friend-detail-status You're friends!
-          - else
+          - elsif current_user.enable_friendships?
             = link_to(t("friendships.form.add friend button"), offer_friendships_path(user_id: friend.id) , method: :post, class: "friend-detail-add", title: "Send this person a friend request" )
 
 = link_to(t("moments.action.load more"),"#", id: "load-more", class: "dark", "data-next-url" => "#{_list_user_friends_path(user_id: @user.to_param, page: friends.next_page)}") if friends.next_page
