Fixed Moments styling

--- a/app/assets/stylesheets/mobile/_social.sass
+++ b/app/assets/stylesheets/mobile/_social.sass
@@ -822,8 +822,8 @@ body.transition .moment
 
       b
         display: block
-        color: #0084c8
-        font-size: 18px
+        color: #444
+        font-size: 16px
         line-height: 1.3em
         margin: 0 0 15px
         +box-sizing(border-box)
