--- a/app/assets/stylesheets/mobile/_social.sass
+++ b/app/assets/stylesheets/mobile/_social.sass
@@ -215,7 +215,7 @@ body.transition .moment
 .moment-time
   padding: 17px 0 5px 11px
   font-size: 11px
-  width: 300px
+  width: 70%
 
 // !Comments attached to a moment
 
