Updated VoD moment so verse link looks the same as other moments Unbolded text in moment headers so it's easier to read Shrank day of text in RP progress bars

--- a/app/assets/javascripts/templates/moments/votd_verse.hbs
+++ b/app/assets/javascripts/templates/moments/votd_verse.hbs
@@ -2,5 +2,5 @@
   <p class="moment-votd-verse" data-reference-human="{{human}}" data-reference-path="{{to_path}}">{{content_plain}}
   <span class="content-action"><a href="#" class="more">#{t("social.moment.read all")}</a><a href="#" class="less">#{t("social.moment.read less")}</a></span>
   </p>
+  <a href="{{to_path}}" class="moment-verse-link">{{human}}</a>
 </div>
-<a href="{{to_path}}" class="moment-vod-links">{{human}}</a>
