--- a/app/assets/stylesheets/mobile/_social.sass
+++ b/app/assets/stylesheets/mobile/_social.sass
@@ -412,6 +412,7 @@ body.transition .moment
 
       b
         color: #0084c8
+        font-weight: normal
 
   .moment-dl-text
     b
@@ -422,6 +423,10 @@ body.transition .moment
 
 .moment-votd-verse-wrap
   margin-bottom: 15px
+  clear: both
+  max-height: 150px
+  overflow: hidden
+  position: relative
 
 .moment-verse-wrap
   clear: both
@@ -553,7 +558,6 @@ body.transition .moment
 .moment-vod-list
   overflow: hidden
   margin-bottom: 0
-  float: right
 
   li
     float: left
