--- a/app/assets/stylesheets/_social.sass
+++ b/app/assets/stylesheets/_social.sass
@@ -398,6 +398,7 @@ body.transition .moment
 
       b
         color: #0084c8
+        font-weight: normal
 
   .moment-dl-text
     b
@@ -407,6 +408,11 @@ body.transition .moment
 
 .moment-votd-verse-wrap
   margin-bottom: 15px
+  clear: both
+  max-height: 250px
+  overflow: hidden
+  position: relative
+  padding-bottom: 25px
 
 .moment-verse-wrap
   clear: both
@@ -446,6 +452,7 @@ body.transition .moment
   bottom: 0
   background: #f5f4f3
   padding: 10px 15px
+  box-sizing: border-box
 
 .moment-vod-links
   padding: 1px 7px
@@ -538,7 +545,6 @@ body.transition .moment
 .moment-vod-list
   overflow: hidden
   margin-bottom: 0
-  float: right
 
   li
     float: left
@@ -801,6 +807,7 @@ body.transition .moment
       width: 110px
       height: 22px
       line-height: 22px
+      font-size: .85em
 
     .progress_wrap,
     .progress_bar_outer,
