--- a/app/assets/stylesheets/mobile/_dynamic_menus.sass
+++ b/app/assets/stylesheets/mobile/_dynamic_menus.sass
@@ -434,13 +434,16 @@
   margin-top: 34px
 
   .verse-actions-success-message
+    display: block
     background:
       color: #d9e4c9
     border-color: #91b164
     color: #4b7518
     margin: 0
     padding: 8px
-
+    a
+      color: #fff
+      text-decoration: underline
 
 #menu_verse_actions .references
   padding: 0px 5px
