Hotfix for subscriptions in reader
Fixes
https://app.getsentry.com/youversion-web/youversion-web/group/19359625/

--- a/app/views/widgets/_my_plans.html.haml
+++ b/app/views/widgets/_my_plans.html.haml
@@ -1,4 +1,7 @@
-- subscriptions = Subscription.all(current_user)
+-# locals:
+-# subscriptions (from Reference Presenter)
+-# called from:
+-# sidebar/reference/show
 
 - if subscriptions.blank?
   = render partial: 'widgets/featured_plans'
