Styled mobile success message Removed redundant HTML from Highlight panel

--- a/app/assets/stylesheets/mobile/_dynamic_menus.sass
+++ b/app/assets/stylesheets/mobile/_dynamic_menus.sass
@@ -436,11 +436,11 @@
   .verse-actions-success-message
     display: block
     background:
-      color: #d9e4c9
-    border-color: #91b164
-    color: #4b7518
+      color: #48a900
+    color: #fff
     margin: 0
-    padding: 8px
+    padding: 8px 15px
+    +border-radius(5px)
     a
       color: #fff
       text-decoration: underline
