Styled the copyright info in the mobile audio player drop down

--- a/app/assets/stylesheets/mobile/_main_reader.sass
+++ b/app/assets/stylesheets/mobile/_main_reader.sass
@@ -1047,14 +1047,17 @@ article[data-setting-show-highlights="false"] .verse.highlighted.dark_bg > .labe
       box-shadow: none
 
       a.action_button_blue
-        width: 95%
         margin-bottom: 0
 
     dd
       box-shadow: none
       border: 0px
 
+  .copy
+    margin: 0 0 10px
 
+    p
+      line-height: 1.5em
 
   a.close
     display: none
