--- a/app/assets/stylesheets/_notifications.sass
+++ b/app/assets/stylesheets/_notifications.sass
@@ -109,6 +109,7 @@ article.social-requests ul
     height: 40px
     margin: 5px 0px 5px 23px
     text-indent: 100%
+    white-space: nowrap
     overflow: hidden
     position: relative
 
@@ -138,17 +139,22 @@ article.social-requests ul
     top: 48px
     left: -131px
     width: 350px
-    border: 1px solid #d4d4d4
     +border-radius(5px)
     background: #fff
     display: none
     opacity: 0
-    -moz-box-shadow: 0px 0px 8px #222
-    -webkit-box-shadow: 0px 0px 8px #222
-    box-shadow: 0px 0px 8px #222
+    +box-shadow(0px 0px 8px #777)
 
     .loading-indicator
-      text-align: center
+      text-indent: 100%
+      overflow: hidden
+      white-space: nowrap
+      height: 32px
+      background: image-url("loading.gif") no-repeat center center
+      background-size: 32px 32px
+      width: 100%
+      padding: 0
+      margin: 0 0 10px
 
     .action_button_green,
     .action_button_grey
@@ -185,9 +191,10 @@ article.social-requests ul
 
     h4
       color: #505050
-      padding-left: 15px
+      padding: 15px
       line-height: 12px
       margin-bottom: 10px
+      background-color: #ededed
 
     .find-friends
       float: right
@@ -251,6 +258,24 @@ article.social-requests ul
           margin-top: 10px
           width: 100%
 
+#header
+  .header-popover
+
+    h4:first-child
+      margin-top: -10px
+      +border-radius(5px 5px 0 0)
+
+    ul
+      .list-item
+        p
+          margin: 0 0 0 5px
+          font-size: 15px
+
+      .list-item:first-child
+        border: none
+
+    .notifications-list
+      border: none
 
   .header-popover.notifications
     left: -91px
