--- a/app/assets/stylesheets/_pages.sass
+++ b/app/assets/stylesheets/_pages.sass
@@ -113,7 +113,7 @@
 
     li a
       font-weight: bold
-      color: $green
+      color: #48A900
 
   .left_column
     float: left
@@ -123,37 +123,27 @@
     width: 50%
     float: right
 
-#mobile_downloads a.cta
-  background: #81a951
-  background: -moz-linear-gradient(top,  #81a951 0%, #679037 100%)
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#81a951), color-stop(100%,#679037))
-  background: -webkit-linear-gradient(top,  #81a951 0%,#679037 100%)
-  background: -o-linear-gradient(top,  #81a951 0%,#679037 100%)
-  background: -ms-linear-gradient(top,  #81a951 0%,#679037 100%)
-  background: linear-gradient(top,  #81a951 0%,#679037 100%)
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#81a951', endColorstr='#679037',GradientType=0 )
-  display: block
-  padding: 15px 15px 12px 15px
-  float: left
-  border-radius: 4px
-  border: 1px #607346 solid
-  box-shadow: inset 0px 1px 0px rgba(#fff, .3)
-a.cta img
-  padding-right: 10px
-a.cta h4
-  margin: 0px
-  padding: 0px
-  font-size: 16px
-  text-shadow: 0px 1px 0px rgba(0,0,0,.2)
-  color: #fff
-  float: left
-a.cta span
-  text-shadow: 0px 1px 0px rgba(0,0,0,.2)
-  margin: 0px
-  padding: 0px
-  font-size: 13px
-  color: #fff
-  float: left
+#mobile_downloads
+  a.cta
+    background: #48A900 image-url("mobile_download.png") no-repeat 15px center
+    background-size: 54px 51px
+    display: block
+    padding: 18px 15px 15px 80px
+    clear: both
+    border-radius: 5px
+    box-shadow: inset 0px -2px 0px rgba(#000, .3)
+
+    h4
+      margin: 0px
+      padding: 0px
+      font-size: 16px
+      color: #fff
+
+    span
+      margin: 0px
+      padding: 0px
+      font-size: 13px
+      color: #fff
 
 #dl_iphone
   background: image-url("mobile_dl_icons.png") 0px 0px no-repeat !important
